--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
         <div id='video-wrapper'>
             <p class="no-video">Відео за обраними параметрами не знайдено.</p>
         </div>
+
+        <img id='scroll-top' src='img/scroll-up.png'/>
     </main>
 </body>
 
