--- a/index.html
+++ b/index.html
@@ -7,6 +7,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Російські війська в Україні</title>
 
+    <!-- OpenGraph Meta Tags -->
+    <meta property="fb:app_id" content="329250623807149"/>
+    <meta property="og:site_name" content="ТЕКСТИ.ORG.UA"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:title"
+          content="Російські війська в Україні. Хронологія"/>
+    <meta property="og:image" content="https://texty.org.ua/d/2022/var-video/img/cover.png"/>
+    <meta property="og:description"
+          content="Тексти зібрали та впорядкували воєнні відео з телеграм-каналів за датою, локацією та категорією"/>
+    <meta property="og:url" content="https://texty.org.ua/d/2022/uz/"/>
+
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:site" content="@textyorgua"/>
+    <meta property="twitter:account_id" content="49572937"/>
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:url" content="https://texty.org.ua/d/2022/uz/">
+    <meta name="twitter:title"
+          content="Російські війська в Україні. Хронологія"/>
+    <meta name="twitter:description"
+          content="Тексти зібрали та впорядкували воєнні відео з телеграм-каналів за датою, локацією та категорією."/>
+    <meta name="twitter:image:width" content="1200"/>
+    <meta name="twitter:image:height" content="630"/>
+
+
+    <!-- Other Meta Tags -->
+    <meta name="title" content="Російські війська в Україні. Хронологія">
+    <meta name="description" content="Тексти зібрали та впорядкували воєнні відео з телеграм-каналів за датою, локацією та категорією">
+
+
+
     <link rel='stylesheet' href='css/styles.css' />
 </head>
 
@@ -66,5 +97,24 @@
 
 
 <script src='js/main.js'></script>
+
+
+<!-- Top Projrct Banners -->
+<script src="https://texty.org.ua/static/TopProjectsBannerD.js"></script>
+
+<!-- Google analytics -->
+<script type="text/javascript">
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-18136548-1']);
+    _gaq.push(['_trackPageview']);
+    (function () {
+        var ga = document.createElement('script');
+        ga.type = 'text/javascript';
+        ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'stats.g.doubleclick.net/dc.js';
+        var s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(ga, s);
+    })();
+</script>
 
 </html>
