--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
     <meta property="og:type" content="website"/>
     <meta property="og:title"
           content="Російські війська в Україні. Хронологія"/>
-    <meta property="og:image" content="https://texty.org.ua/d/2022/var-video/img/cover.png"/>
+    <meta property="og:image" content="https://texty.org.ua/d/2022/war_video/img/cover.png"/>
     <meta property="og:description"
           content="Тексти зібрали та впорядкували воєнні відео з телеграм-каналів за датою, локацією та категорією"/>
-    <meta property="og:url" content="https://texty.org.ua/d/2022/uz/"/>
+    <meta property="og:url" content="https://texty.org.ua/d/2022/war_video/"/>
 
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:site" content="@textyorgua"/>
     <meta property="twitter:account_id" content="49572937"/>
     <meta name="twitter:card" content="summary_large_image"/>
-    <meta name="twitter:url" content="https://texty.org.ua/d/2022/uz/">
+    <meta name="twitter:url" content="https://texty.org.ua/d/2022/war_video/">
     <meta name="twitter:title"
           content="Російські війська в Україні. Хронологія"/>
     <meta name="twitter:description"
