--- a/index.html
+++ b/index.html
@@ -46,7 +46,25 @@
         <header>
             
             <div class="header-wrapper">
-                <img style='width:150px; margin: 10px 0 20px' src='white_logo.svg'/>                 
+                <img style='width:150px; margin: 10px 0 20px' src='white_logo.svg'/>  
+                <div id="socio-icons">
+                      <!--fb-->
+                <a href="https://www.facebook.com/sharer/sharer.php?u=https://texty.org.ua/d/2022/war_video/"
+                target="_blank" class="share-btn">
+                 <div class="icon-wrapper">                     
+                     <img id="fb" src="img/facebook.png"/>
+                 </div>
+             </a>
+
+             <!--tw -->
+             <a href="https://twitter.com/intent/tweet?text=https://texty.org.ua/d/2022/war_video/"
+                target="_blank" class="share-btn">
+                 <div class="icon-wrapper">                    
+                     <img id="tw" src="img/twitter.png"/>
+                 </div>
+             </a>
+
+                </div>               
                 <h1>Російські війська в Україні. <span style="color:white;">Хронологія</span></h1>               
             </div>
 
