--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Російські війська в Україні</title>
+    <title>Втрати російських військ в Україні</title>
 
     <!-- OpenGraph Meta Tags -->
     <meta property="fb:app_id" content="329250623807149"/>
     <meta property="og:site_name" content="ТЕКСТИ.ORG.UA"/>
     <meta property="og:type" content="website"/>
     <meta property="og:title"
-          content="Російські війська в Україні. Хронологія"/>
+          content="Втрати російських військ в Україні. Хронологія"/>
     <meta property="og:image" content="https://texty.org.ua/d/2022/war_video/img/cover.png"/>
     <meta property="og:description"
           content="Тексти зібрали та впорядкували воєнні відео з телеграм-каналів за датою, локацією та категорією"/>
@@ -25,7 +25,7 @@
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:url" content="https://texty.org.ua/d/2022/war_video/">
     <meta name="twitter:title"
-          content="Російські війська в Україні. Хронологія"/>
+          content="Втрати російських військ в Україні. Хронологія"/>
     <meta name="twitter:description"
           content="Тексти зібрали та впорядкували воєнні відео з телеграм-каналів за датою, локацією та категорією."/>
     <meta name="twitter:image:width" content="1200"/>
@@ -33,7 +33,7 @@
 
 
     <!-- Other Meta Tags -->
-    <meta name="title" content="Російські війська в Україні. Хронологія">
+    <meta name="title" content="Втрати російських військ в Україні. Хронологія">
     <meta name="description" content="Тексти зібрали та впорядкували воєнні відео з телеграм-каналів за датою, локацією та категорією">
 
 
@@ -65,7 +65,7 @@
              </a>
 
                 </div>               
-                <h1>Російські війська в Україні. <span style="color:white;">Хронологія</span></h1>               
+                <h1>Втрати російських військ в Україні. <span style="color:white;">Хронологія</span></h1>               
             </div>
 
             <!-- календар -->
