--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Втрати російських військ в Україні</title>
+    <title>Відео війни.Хронологія</title>
 
     <!-- OpenGraph Meta Tags -->
     <meta property="fb:app_id" content="329250623807149" />
     <meta property="og:site_name" content="ТЕКСТИ.ORG.UA" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Втрати російських військ в Україні. Хронологія" />
+    <meta property="og:title" content="Відео війни. Хронологія" />
     <meta property="og:image" content="https://texty.org.ua/d/2022/war_video/img/cover.png" />
     <meta property="og:description"
         content="Тексти зібрали та впорядкували воєнні відео з телеграм-каналів за датою, локацією та категорією" />
@@ -23,7 +23,7 @@
     <meta property="twitter:account_id" content="49572937" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:url" content="https://texty.org.ua/d/2022/war_video/">
-    <meta name="twitter:title" content="Втрати російських військ в Україні. Хронологія" />
+    <meta name="twitter:title" content="Відео війни.Хронологія" />
     <meta name="twitter:description"
         content="Тексти зібрали та впорядкували воєнні відео з телеграм-каналів за датою, локацією та категорією." />
     <meta name="twitter:image:width" content="1200" />
@@ -31,7 +31,7 @@
 
 
     <!-- Other Meta Tags -->
-    <meta name="title" content="Втрати російських військ в Україні. Хронологія">
+    <meta name="title" content="Відео війни. Хронологія">
     <meta name="description"
         content="Тексти зібрали та впорядкували воєнні відео з телеграм-каналів за датою, локацією та категорією">
 
@@ -67,7 +67,7 @@
 
                 </div>
 
-                <h1 class='mobile-only'>Втрати російських військ в Україні. <span style="color:white">Хронологія</span></h1>
+                <h1 class='mobile-only'>Відео війни. <span style="color:white">Хронологія</span></h1>
 
             </div>
 
@@ -105,7 +105,7 @@
         </header>
 
         <div>
-            <h1 class='desktop-only'>Втрати російських військ в Україні. <span style="color: #333;">Хронологія</span></h1>
+            <h1 class='desktop-only'>Відео війни. <span style="color: #333;">Хронологія</span></h1>
             <div class='metodology'>
                 <h2 class='button'>Методологія</h2>          
                 <div class='methodology-wrapper hidden'>
