активний лінк у лого текстів

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <header>
 
             <div class="header-wrapper">
-                <img style='width:150px; margin: 10px 0 20px' src='white_logo.svg' />
+                <a href="https://texty.org.ua/"><img style='width:150px; margin: 10px 0 20px' src='white_logo.svg' /></a>
 
            
                 <div id="socio-icons">
