--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         деякі записи можуть публікуватися із затримкою.</p>
                     <p>Ми розбили усі відео на кілька категорій. Наприклад, Ви можете відібрати лише записи з розбитими
                         колонами російських військ або лише записи із застосуванням турецьких безпілотників «Байрактар»
-                        чи переносних зенітних ракетних комплексів (ПЗРК). Повний перелік категорій дивіться у спадному
+                        чи переносних зенітних ракетних комплексів (ПТРК). Повний перелік категорій дивіться у спадному
                         списку під календарем ліворуч.</p>
                     <p>Також є можливість переглянути відео за областями. На жаль, далеко не всі відео містять точну
                         вказівку боїв.</p>
