--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
 
                 </div>
 
-                <h1 class='mobile-only'>Відео війни. <span style="color:white">Хронологія</span></h1>
+                <h1 class='mobile-only'>Відео війни. <span style="color:white">Хронологія</span>
+                    <span><a style='margin-left: 20px; font-size: 16px; color: white' href="en/index.html">EN</a></span>
+                </h1>
 
             </div>
 
@@ -109,7 +111,8 @@
         </header>
 
         <div>
-            <h1 class='desktop-only'>Відео війни. <span style="color: #333;">Хронологія</span></h1>
+            <h1 class='desktop-only'>Відео війни. <span style="color: #333;">Хронологія</span>
+                <span><a style='margin-left: 50px; font-size: 16px;' href="en/index.html">English version</a></span></h1>
             <div class='metodology'>
                 <h2 class='button'>Методологія</h2>
                 <div class='methodology-wrapper hidden'>
@@ -164,17 +167,17 @@
             <h3 id="read-more-title">Читайте також:</h3>
             <div id="read-more">
 
-                <a id="rm-1" class="rm"
+                <a id="rm-1" class="rm" style='background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url("img/rm-1.png");'
                     href="https://texty.org.ua/articles/105992/prodovzhena-vijna-yak-slabsha-storona-ukrayina-mozhe-vyhraty/"
                     target="_blank">
                     <h2>"Подовжена війна". Як слабша сторона може виграти</h2>
                 </a>
-                <a id="rm-2" class="rm"
+                <a id="rm-2" class="rm" style='background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url("img/rm-2.jpg");'
                     href="https://texty.org.ua/articles/106004/zrozumila-shcho-kozhna-nich-dlja-moyikh-ditej-mozhe-staty-ostannoju-pro-sumy-u-vijni-ta-vtechu-vid-neyi/"
                     target="_blank">
                     <h2>Життя під обстрілами. Драматична історія журналістки з Сум</h2>
                 </a>
-                <a id="rm-3" class="rm"
+                <a id="rm-3" class="rm" style='background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url("img/rm-3.jpg");'
                     href="https://texty.org.ua/projects/105597/upiznaj-svoyih-gra-trenazher-chij-ce-tank/?src=main"
                     target="_blank">
                     <h2>Упізнай своїх. Гра-тренажер: ЧИЙ ЦЕ ТАНК?!</h2>
