--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         деякі записи можуть публікуватися із затримкою.</p>
                     <p>Ми розбили усі відео на кілька категорій. Наприклад, Ви можете відібрати лише записи з розбитими
                         колонами російських військ або лише записи із застосуванням турецьких безпілотників «Байрактар»
-                        чи переносних зенітних ракетних комплексів (ПТРК). Повний перелік категорій дивіться у спадному
+                        чи протитанкових ракетних комплексів (ПТРК). Повний перелік категорій дивіться у спадному
                         списку під календарем ліворуч.</p>
                     <p>Також є можливість переглянути відео за областями. На жаль, далеко не всі відео містять точну
                         вказівку боїв.</p>
@@ -132,8 +132,8 @@
                             target="_blank">https://t.me/operativnoZSU</a>)</p>
                     <p>- InformNapalm (<a href='https://t.me/informnapalm'
                             target="_blank">https://t.me/informnapalm</a>)</p>
-                    <p>- Conflict Intelligence Team (<a href='https://t.me/CITeam'
-                            target="_blank">https://t.me/CITeam</a>)</p>
+                    <p>- Ukraine Weapons Tracker (<a href='https://t.me/UAWeapons'
+                        target="_blank">https://t.me/UAWeapons</a>)</p>
 
 
                     <p class='mobile-only'> Над проектом працювали: <a
