--- a/en/index.html
+++ b/en/index.html
@@ -120,7 +120,7 @@
 
                    <p>’Texty’ has reviewed, preserved, and analyzed hundreds of videos where the losses of Russian military equipment during the war against Ukraine have been recorded.</p> 
                    <p>We consider ‘the date of the video’ to be the day when this video appeared in the public domain. We acknowledge that the upload of some entries may have been delayed.</p> 
-                   <p> We’ve allocated all the videos into several categories. For example, it is possible to select only records with damaged columns of Russian troops or only records with Turkish Bayraktar drones or portable anti-aircraft missile systems (ATGMs) operating. See the drop-down list below the calendar on the left for a complete list of categories.</p> 
+                   <p> We’ve allocated all the videos into several categories. For example, it is possible to select only records with damaged columns of Russian troops or only records with Turkish Bayraktar drones or anti-tank guided missile (ATGW) operating. See the drop-down list below the calendar on the left for a complete list of categories.</p> 
                    <p> It is also possible to watch videos by region. Unfortunately, not all videos contain accurate combat instructions about what has actually happened, when, and where.</p> 
                    <p>We used data from the following telegram channels:</p> 
                     
@@ -128,8 +128,8 @@
                             target="_blank">https://t.me/operativnoZSU</a>)</p>
                     <p>- InformNapalm (<a href='https://t.me/informnapalm'
                             target="_blank">https://t.me/informnapalm</a>)</p>
-                    <p>- Conflict Intelligence Team (<a href='https://t.me/CITeam'
-                            target="_blank">https://t.me/CITeam</a>)</p>
+                    <p>- Ukraine Weapons Tracker (<a href='https://t.me/UAWeapons'
+                            target="_blank">https://t.me/UAWeapons</a>)</p>
 
 
                     <p class='mobile-only'> Credits: <a
