параметри фільтрів в URL

--- a/en/index.html
+++ b/en/index.html
@@ -78,7 +78,7 @@
 
             <!-- календар -->
             <div id="calendar-wrapper" class='wrapper'>
-                <span id="show_all_video" class='show_all'>Date isn't selected</span>
+                <span id="show_all_dates" class='show_all'>Date isn't selected</span>
                 <span id='selected-date'>Select a date: </span>
                 <div id="day-select"></div>
             </div>
