--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
             <!-- календар -->
             <div id="calendar-wrapper" class='wrapper'>
-                <span id="show_all_video" class='show_all'>Дату не обрано</span>
+                <span id="show_all_dates" class='show_all'>Дату не обрано</span>
                 <span id='selected-date'>оберіть день: </span>
                 <div id="day-select"></div>
             </div>
