--- a/en/index.html
+++ b/en/index.html
@@ -15,14 +15,14 @@
     <meta property="og:image" content="https://texty.org.ua/d/2022/war_video/img/cover.png" />
     <meta property="og:description"
         content="Texty has reviewed, preserved, and analyzed hundreds of videos where the losses of Russian military equipment during the war against Ukraine have been recorded." />
-    <meta property="og:url" content="https://texty.org.ua/d/2022/war_video/" />
+    <meta property="og:url" content="https://texty.org.ua/d/2022/war_video/en/" />
 
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:site" content="@textyorgua" />
     <meta property="twitter:account_id" content="49572937" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:url" content="https://texty.org.ua/d/2022/war_video/">
+    <meta name="twitter:url" content="https://texty.org.ua/d/2022/war_video/en/">
     <meta name="twitter:title" content="War video. Chronology" />
     <meta name="twitter:description"
         content="Texty has reviewed, preserved, and analyzed hundreds of videos where the losses of Russian military equipment during the war against Ukraine have been recorded." />
@@ -51,7 +51,7 @@
 
                 <div id="socio-icons">
                     <!--fb-->
-                    <a href="https://www.facebook.com/sharer/sharer.php?u=https://texty.org.ua/d/2022/war_video/"
+                    <a href="https://www.facebook.com/sharer/sharer.php?u=https://texty.org.ua/d/2022/war_video/en/"
                         target="_blank" class="share-btn">
                         <div class="icon-wrapper">
                             <img id="fb" src="../img/facebook.png" />
@@ -59,7 +59,7 @@
                     </a>
 
                     <!--tw -->
-                    <a href="https://twitter.com/intent/tweet?text=https://texty.org.ua/d/2022/war_video/"
+                    <a href="https://twitter.com/intent/tweet?text=https://texty.org.ua/d/2022/war_video/en/"
                         target="_blank" class="share-btn">
                         <div class="icon-wrapper">
                             <img id="tw" src="../img/twitter.png" />
@@ -194,7 +194,8 @@
 <script src="../lib/tippy-bundle.umd.js"></script>
 
 
-<script src='main.js'></script>
+<script src='../js/en.js'></script>
+<script src='../js/main.js'></script>
 
 
 <!-- Top Projrct Banners -->
