--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 
 <head>
     <meta charset="UTF-8">
@@ -200,7 +200,7 @@
 <script src="lib/popper.min.js"></script>
 <script src="lib/tippy-bundle.umd.js"></script>
 
-
+<script src='js/uk.js'></script>
 <script src='js/main.js'></script>
 
 
