--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
 </body>
 
 <script src='lib/d3v5.min.js'></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/lozad/dist/lozad.min.js"></script>
 
 <!-- tooltips -->
 <script src="lib/popper.min.js"></script>
