--- a/index.html
+++ b/index.html
@@ -77,11 +77,14 @@
 
             <!-- календар -->
             <div id="calendar-wrapper" class='wrapper'>
+                <div>
                 <span id="show_all_dates" class='show_all'>Дату не обрано</span>
                 <span id='selected-date'>оберіть день: </span>
+            </div>
                 <div id="day-select"></div>
             </div>
 
+           <!--  <div style='width: 90%; margin: 0 auto; display: flex;'> -->
             <!-- категорія -->
             <div id="category-wrapper" class='wrapper'>
                 <span id="show-all-categories" class='show_all'>Категорію не обрано</span>
@@ -97,10 +100,11 @@
                     <option value='null' disabled selected>оберіть регіон</option>
                 </select>
             </div>
+           <!--  </div> -->
 
-            <p class='credits'> Над проектом працювали: <br> <a href='https://texty.org.ua/author/oleksandr-oksymets/'
-                    target="_blank">Олександр Оксимець</a>, <br><a href='https://texty.org.ua/author/vlad-herasymenko/'
-                    target="_blank">Владислав Герасименко</a> та <br> <a
+            <p class='credits'> Над проектом працювали: <a href='https://texty.org.ua/author/oleksandr-oksymets/'
+                    target="_blank">Олександр Оксимець</a>, <a href='https://texty.org.ua/author/vlad-herasymenko/'
+                    target="_blank">Владислав Герасименко</a> та <a
                     href='https://texty.org.ua/author/yevhenija-drozdova/' target="_blank">Євгенія Дроздова.</a></p>
 
 
