--- a/en/index.html
+++ b/en/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>War video. Chronology</title>
+    <link rel="canonical" href="https://texty.org.ua/d/2022/war_video/en/" />
 
     <!-- OpenGraph Meta Tags -->
     <meta property="fb:app_id" content="329250623807149" />
